--- a/pom.xml
+++ b/pom.xml
@@ -106,7 +106,7 @@
 		</dependency>
 
 	</dependencies>
-
+<!--
 	<build>
 		<plugins>
 
@@ -123,6 +123,36 @@
 
       </plugins>
 	
+	</build>
+-->
+	<build>
+		<finalName>TCS Project : Banking Application</finalName>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<version>2.3</version>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>copy</goal>
+						</goals>
+						<configuration>
+							<artifactItems>
+								<artifactItem>
+									<groupId>com.github.jsimone</groupId>
+									<artifactId>webapp-runner</artifactId>
+									<version>8.0.30.2</version>
+									<destFileName>webapp-runner.jar</destFileName>
+								</artifactItem>
+							</artifactItems>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+
+		</plugins>
 	</build>
 
 </project>
